# yuanBook

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  build-rpi.ps1  build-rpi4-aarch64-release.bat  build-windows-release.bat  build.bat  build.ps1  submit-github.bat
cmake/: toolchain-rpi-aarch64.cmake  toolchain-rpi-armhf.cmake
content/: sample.md
docs/: donation-page-architecture.md
scripts/: package-release.ps1
tests/: auth_request_context_test.cpp  auth_security_test.cpp  family_ledger_domain_test.cpp  user_account_management_test.cpp  user_password_management_test.cpp  voice_parse_output_test.cpp
www/: admin.html  index.html  ledger.html  register.html
www/css/: style.css
www/js/: admin.js  app.js  register.js
yuanbook/: AuthSecurity.cpp  AuthSecurity.h  BillImportManager.cpp  BillImportManager.h  BillImportUtils.cpp  BillImportUtils.h  JsonLite.cpp  JsonLite.h  LedgerManager.cpp  LedgerManager.h  MoneyImage.inc  RuntimeSettings.cpp  RuntimeSettings.h  SystemUtils.cpp  SystemUtils.h  VoiceLedgerManager.cpp  VoiceLedgerManager.h  WebServer.cpp  WebServer.h  WorkLog.cpp  WorkLog.h  YuanBook.cpp  YuanBook.h
